Fix dark mode colors. Fun with media color mode selectors

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,12 +8,14 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    --foreground-rgb: 125, 133, 144;
+    --background-rgb: 13, 17, 23;
   }
 }
 
 body {
   color: rgb(var(--foreground-rgb));
+  background-color: rgb(var(--background-rgb));
 }
 
 @layer base {
